--- a/pom.xml
+++ b/pom.xml
@@ -263,14 +263,37 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>package-javadoc</id>
+						<phase>package</phase>
+						<goals>
+							<goal>jar</goal>
+							<goal>test-jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
 				<configuration>
-					<arguments combine.self="override" />
-					<autoVersionSubmodules>true</autoVersionSubmodules>
-					<tagNameFormat>@{project.version}</tagNameFormat>
-					<preparationProfiles>jboss-release</preparationProfiles>
-					<releaseProfiles>quickly,jboss-release</releaseProfiles>
+					<overwrite>true</overwrite>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>package-source</id>
+						<phase>package</phase>
+						<goals>
+							<goal>test-jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -284,22 +307,27 @@
 
 	<profiles>
 		<profile>
+			<id>quickly</id>
+			<properties>
+				<checkstyle.skip>true</checkstyle.skip>
+				<maven.javadoc.skip>true</maven.javadoc.skip>
+				<skipTests>true</skipTests>
+				<skipITs>true</skipITs>
+			</properties>
+		</profile>
+		<profile>
 			<id>jboss-release</id>
+			<properties>
+				<checkstyle.skip>true</checkstyle.skip>
+				<skipTests>true</skipTests>
+				<skipITs>true</skipITs>
+			</properties>
 			<build>
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
-						<configuration>
-							<detectJavaApiLink>true</detectJavaApiLink>
-						</configuration>
 						<executions>
-							<execution>
-								<id>javadoc</id>
-								<goals>
-									<goal>jar</goal>
-								</goals>
-							</execution>
 							<execution>
 								<id>javadoc-aggregate</id>
 								<inherited>false</inherited>
@@ -311,15 +339,6 @@
 					</plugin>
 				</plugins>
 			</build>
-		</profile>
-		<profile>
-			<id>quickly</id>
-			<properties>
-				<checkstyle.skip>true</checkstyle.skip>
-				<skipTests>true</skipTests>
-				<skipITs>true</skipITs>
-				<arguments>-DskipITs -DskipTests -Dcheckstyle.skip=true</arguments>
-			</properties>
 		</profile>
 	</profiles>
 </project>
